# playdate-template

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh
config/: Makefile
config/Source/: pdxinfo
src/: main.c
